--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   form_builder_validators: ^9.1.0
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
+  crypto: ^3.0.3
   connectivity_plus: ^5.0.2
   restart_app: ^1.2.1
 
