--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   art_sweetalert: ^0.0.5
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^9.1.0
+  intl: ^0.18.1
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
   crypto: ^3.0.3
