--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   crypto: ^3.0.3
   connectivity_plus: ^5.0.2
   restart_app: ^1.2.1
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
