--- a/assets/.env
+++ b/assets/.env
@@ -1,3 +1,3 @@
 API_KEY=fb9f678f7c44e621e56e8bc025201158
-API_URL="http://127.0.0.1:8000/api"
-APP_URL="http://127.0.0.1:8000"
+API_URL="https://upjrpl.000webhostapp.com/api"
+APP_URL="https://upjrpl.000webhostapp.com"
