--- a/assets/.env
+++ b/assets/.env
@@ -1,3 +1,3 @@
 API_KEY=fb9f678f7c44e621e56e8bc025201158
-API_URL="https://upjrpl.000webhostapp.com/api"
-APP_URL="https://upjrpl.000webhostapp.com"
+API_URL="https://7c1e-157-20-236-226.ngrok-free.app/api"
+APP_URL="https://7c1e-157-20-236-226.ngrok-free.app"
